k8s/traffic-worker.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: traffic-worker
  namespace: smartcity

spec:
  replicas: 1

  selector:
    matchLabels:
      app: traffic-worker

  template:
    metadata:
      labels:
        app: traffic-worker

    spec:
      containers:
      - name: traffic-worker

        image: smart-city-platform-kelompok4-traffic-worker
        imagePullPolicy: Never
