k8s/auth.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: auth-service
  namespace: smartcity

spec:
  replicas: 1

  selector:
    matchLabels:
      app: auth-service

  template:

    metadata:
      labels:
        app: auth-service

    spec:

      containers:

      - name: auth-service

        image: smart-city-platform-kelompok4-auth-service

        imagePullPolicy: Never

        ports:
        - containerPort: 3002
---
apiVersion: v1

kind: Service

metadata:
  name: auth-service
  namespace: smartcity

spec:

  selector:
    app: auth-service

  ports:

  - port: 3002
    targetPort: 3002

  type: ClusterIP
