k8s/citizen.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: citizen-service
  namespace: smartcity

spec:
  replicas: 1

  selector:
    matchLabels:
      app: citizen-service

  template:
    metadata:
      labels:
        app: citizen-service

    spec:
      containers:
      - name: citizen-service

        image: smart-city-platform-kelompok4-citizen-service
        imagePullPolicy: Never

        ports:
        - containerPort: 8080

        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 20
          periodSeconds: 10

        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 40
          periodSeconds: 20

---
apiVersion: v1
kind: Service

metadata:
  name: citizen-service
  namespace: smartcity

spec:

  selector:
    app: citizen-service

  ports:
  - port: 8080
    targetPort: 8080

  type: ClusterIP
