k8s/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: smartcity

spec:
  replicas: 1

  selector:
    matchLabels:
      app: api-gateway

  template:
    metadata:
      labels:
        app: api-gateway

    spec:
      containers:
      - name: api-gateway

        image: smart-city-platform-kelompok4-api-gateway
        imagePullPolicy: Never

        ports:
        - containerPort: 3000

        readinessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 10

        livenessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 20

---
apiVersion: v1
kind: Service

metadata:
  name: api-gateway
  namespace: smartcity

spec:

  selector:
    app: api-gateway

  ports:
  - port: 3000
    targetPort: 3000

  type: ClusterIP
