k8s/python-ml.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: python-ml
  namespace: smartcity

spec:
  replicas: 1

  selector:
    matchLabels:
      app: python-ml

  template:
    metadata:
      labels:
        app: python-ml

    spec:
      containers:
      - name: python-ml

        image: smart-city-platform-kelompok4-python-ml
        imagePullPolicy: Never

        ports:
        - containerPort: 5000

        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 120
          periodSeconds: 20

        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 150
          periodSeconds: 30

---
apiVersion: v1
kind: Service

metadata:
  name: python-ml
  namespace: smartcity

spec:

  selector:
    app: python-ml

  ports:
  - port: 5000
    targetPort: 5000

  type: ClusterIP
