k8s/traffic.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traffic-service
  namespace: smartcity

spec:
  replicas: 1

  selector:
    matchLabels:
      app: traffic-service

  template:
    metadata:
      labels:
        app: traffic-service

    spec:
      containers:
      - name: traffic-service

        image: smart-city-platform-kelompok4-traffic-service
        imagePullPolicy: Never

        ports:
        - containerPort: 8001
---
apiVersion: v1
kind: Service

metadata:
  name: traffic-service
  namespace: smartcity

spec:
  selector:
    app: traffic-service

  ports:
  - port: 8001
    targetPort: 8001

  type: ClusterIP
