k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: smartcity-ingress
  namespace: smartcity

spec:

  ingressClassName: nginx

  rules:
  - host: smartcity.local

    http:

      paths:

      - path: /
        pathType: Prefix

        backend:
          service:
            name: api-gateway

            port:
              number: 3000
